[gd_scene load_steps=5 format=2]

[ext_resource path="res://tatu.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Amdre/AmdreBullet.gd" type="Script" id=2]
[ext_resource path="res://Singletons/PlayerState.tres" type="Resource" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="AmdreBullet" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
player_state = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.165334, 0.183293 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeTime" type="Timer" parent="."]

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
